[package]
name = "lame"
version = "0.1.1"
authors = ["Charlie Somerville <charlie@charlie.bz>"]
description = "Rust bindings for libmp3lame"
license = "MIT"
repository = "https://github.com/charliesome/lame-rs"
homepage = "https://github.com/charliesome/lame-rs"

[dependencies]
error-chain = "0.11.0"
